SF-2586 Fix biblical terms dialog text overlap

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/translate/biblical-terms/biblical-term-dialog.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/translate/biblical-terms/biblical-term-dialog.component.scss
@@ -6,5 +6,5 @@ mat-dialog-actions {
 mat-dialog-content {
   display: flex;
   flex-direction: column;
-  row-gap: 1em;
+  row-gap: 2em;
 }
